refine searchFilter
